--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,24 @@
 version: '3'
+
 services:
-  web:
-    build: .
+  app1:
+    build: ./app1
+    volumes:
+      - ./app1:/var/www/html/
+    networks:
+      - mynetwork
     ports:
       - "80:80"
-  redis:
-    image: "redis:alpine"
+
+  app2:
+    build: ./app2
+    volumes:
+      - ./app2:/var/www/html/
+    networks:
+      - mynetwork
+    ports:
+      - "81:80"
+
+networks:
+  mynetwork:
+    driver: bridge
